--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Testing conversational forms</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<script type="text/javascript" src="https://rawgit.com/space10-community/conversational-form/master/dist/conversational-form.min.js" crossorigin></script>
 	</head>
 	<body>
-	Hello World
-		<form cf-form-element action="/post">
-			<input type="text" name="fullname" label="Your Full Name">
-			<input type="radio" name="gender" value="male">
-			<input type="radio" name="gender" value="female">
-			<input type="radio" name="gender" value="other">
-			<input type="submit" value="Submit">
-		</form>
+		<div >
+		Hello World
+			<form cf-form-element action="/post">
+				<input type="text" name="fullname" label="Your Full Name">
+				<input type="radio" name="gender" value="male">
+				<input type="radio" name="gender" value="female">
+				<input type="radio" name="gender" value="other">
+				<input type="submit" value="Submit">
+			</form>
+		</div>
 	</body>
 </html>
