--- a/index.html
+++ b/index.html
@@ -9,19 +9,17 @@
 		<!-- Optional theme -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		
 	</head>
 	<body>
 		<div>
 		Hello World
 			<form cf-form-element action="/post">
-				<label>Your Full Name <input type="text" name="fullname"></label>
-				<label>Gender</label>
-					<label for="male">Male <input type="radio" name="gender" id="male"></label>
-					<label for="female">Female <input type="radio" name="gender" id="female">
-					<label for="other">Other <input type="radio" name="gender" id="other"></label>
+				<label>Your Full Name <input type="text" name="fullname"></label><br/>
+				<label>Gender</label><br/>
+					<label for="male">Male <input type="radio" name="gender" id="male"></label><br/>
+					<label for="female">Female <input type="radio" name="gender" id="female"><br/>
+					<label for="other">Other <input type="radio" name="gender" id="other"></label><br/>
 				<input type="submit" value="Submit">
 			</form>
 		</div>
