--- a/jsbuysdk.html
+++ b/jsbuysdk.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script src="http://sdks.shopifycdn.com/js-buy-sdk/v0/latest/shopify-buy.umd.polyfilled.min.js"></script>
+		<script src="https://sdks.shopifycdn.com/js-buy-sdk/v0/latest/shopify-buy.umd.polyfilled.min.js"></script>
 		<script>
 			var shopClient = ShopifyBuy.buildClient({
 			  apiKey: 'eba3d7d069f3c5b2b5bd2fb551d32f48',
